--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_quill: ^9.3.3
+  focus_detector_v2: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
