--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_quill: ^9.3.3
   focus_detector_v2: ^3.1.0+1
+  flutter_js: ^0.8.0
+  webview_flutter: ^4.7.0
+  flutter_windowmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
