--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   youtube_player_flutter: ^9.0.1
   logger: ^2.2.0
   flutter_inappwebview: ^6.0.0
+  sensors: ^2.0.3
+  throttling: ^2.0.1
 
 dev_dependencies:
   flutter_test:
